Add profile parts and Complete addBook and addTitle with profiles and some improvements
