# src/controllers/book.controller.js
@@ -12,10 +12,10 @@ class TitleController {
 
   async addTitle(req, res, next) {
     try {
-      let { name, slug, summary, originallyPublishedAt } = req.body;
+      let { name, slug, authorIds, summary, originallyPublishedAt } = req.body;
       if (!slug) slug = name;
 
-      const newTitle = await this.#Service.addTitle({ name, slug, summary, originallyPublishedAt });
+      const newTitle = await this.#Service.addTitle({ name, slug, authorIds, summary, originallyPublishedAt });
       return res.status(201).json(newTitle);
     } catch (error) {
       next(error);
@@ -45,10 +45,11 @@ class TitleController {
 
   async addBook(req, res, next) {
     try {
-      const { name, anotherName, titleId, languageId, ISBN, quarto, cover,
+      const { name, anotherName, titleId,
+        translatorIds, languageId, ISBN, quarto, cover,
         pagesNumber, publishedAt, publishSeries, weight, stock, price, bookImages } = req.body;
         
-      const newBook = await this.#Service.addBook({ name, anotherName, titleId, languageId, ISBN, quarto, cover,
+      const newBook = await this.#Service.addBook({ name, anotherName, titleId, languageId, translatorIds, ISBN, quarto, cover,
                                                 pagesNumber, publishedAt, publishSeries, weight, stock, price, bookImages });
       return res.status(201).json(newBook);
     } catch (error) {
