# src/routers/profile.router.js
@@ -1,0 +1,7 @@
+const { Router } = require("express");
+const { addProfile } = require("../controllers/profile.controller");
+const profileRouter = Router();
+
+profileRouter.post('', addProfile);
+
+module.exports = profileRouter;
